--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,7 +171,7 @@
 }
 
 .navbar_button {
-  @apply text-lightbluetext rounded-3xl bg-darkgray text-[16px] font-[500];
+  @apply rounded-3xl bg-darkgray text-[16px] font-[500] text-lightbluetext;
 }
 
 .custom_scroll::-webkit-scrollbar {
