--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
 
-    --accent: 60 4.8% 95.9%;
+    --accent: #7895cb;
     --accent-foreground: 24 9.8% 10%;
 
     --destructive: 0 84.2% 60.2%;
@@ -60,7 +60,7 @@
     --muted: 12 6.5% 15.1%;
     --muted-foreground: 24 5.4% 63.9%;
 
-    --accent: 12 6.5% 15.1%;
+    --accent: #414650;
     --accent-foreground: 60 9.1% 97.8%;
 
     --destructive: 0 62.8% 30.6%;
@@ -215,6 +215,6 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  @apply bg-lightbluetext;
+  @apply bg-secondary;
   border-radius: 2rem;
 }
